[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/end_game_panel.gd" type="Script" id=1]
[ext_resource path="res://graphics/ui/panels/end_game_panel.png" type="Texture" id=2]
[ext_resource path="res://Autumn Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/big_button.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 110
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 80
outline_size = 3
outline_color = Color( 0, 0, 0, 0.588235 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 0.588235 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=5]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("core:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -923.307 ), Vector2( 0, 96.2958 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="end_game_panel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
pnl_clr = Color( 0.996078, 0.34902, 0.596078, 1 )
buttons = [ NodePath("core/restart"), NodePath("core/home") ]

[node name="color_rect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="core" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1377.08, -2.50107 )

[node name="panel_img" type="TextureRect" parent="core"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -282.5
margin_top = -410.5
margin_right = 282.5
margin_bottom = 410.5
texture = ExtResource( 2 )

[node name="end_score" type="Label" parent="core"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -3.5
margin_top = -141.345
margin_right = 3.5
margin_bottom = -9.34521
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="high_score" type="Label" parent="core"]
modulate = Color( 0.996078, 0.909804, 1, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 234.0
margin_top = -288.0
margin_right = 264.0
margin_bottom = -215.0
grow_horizontal = 0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2

[node name="new_high_score" type="Label" parent="core"]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -263.5
margin_top = -597.078
margin_right = 263.5
margin_bottom = -465.078
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Congratulations!"
align = 1

[node name="new_high_score2" type="Label" parent="core/new_high_score"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.0
margin_top = 22.3681
margin_right = 165.0
margin_bottom = 83.3681
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "NEW HIGH SCORE"
align = 1

[node name="restart" parent="core" instance=ExtResource( 4 )]
margin_left = -240.0
margin_top = 80.8047
margin_right = 244.0
margin_bottom = 199.805
button_name = "Restart"
highlight = true

[node name="home" parent="core" instance=ExtResource( 4 )]
margin_left = -240.0
margin_top = 220.805
margin_right = 244.0
margin_bottom = 339.805
button_name = "Home"

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/open_panel = SubResource( 5 )
[connection signal="pressed" from="core/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="core/home" to="." method="_on_home_pressed"]
